--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -98,7 +98,6 @@ img {
 header {
   width:270px;
   float:left;
-  position:fixed;
 }
 
 header ul {
@@ -177,10 +176,7 @@ hr {
 }
 
 footer {
-  width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
+  clear:both;
 }
 
 @media print, screen and (max-width: 960px) {
